--- a/RgestrationForm.html
+++ b/RgestrationForm.html
@@ -39,6 +39,31 @@
 	  <label for="Photo">Photo</label>
 	  <input type="file" name="photo" id="photo"></input>
 	  </div> <br>
+	  
+	  	  <div>
+	  <label for="department">Department:</label>
+      <select name="department">
+	  <option value="EEE">Ewsi</option>
+	  
+	   <option value="EEE">eeee</option>
+	    <option value="EEE">eeee</option>
+		 <option value="EEE">eeeee</option>
+		  <option value="EEE">eeeeeee</option>
+		   <option value="EEE">eee</option>
+		    <option value="EEE">e</option>
+	  </select>
+	  </div> <br>
+	  
+	  <div>
+	  <label for="message">Message</label> <br>
+	  <textarea cols="50" rows="10"></textarea>
+	  </div>
+	  
+	  <div>
+	  <input type="submit" value="submit">
+	  <input type="reset" value="clear">
+	  </div>
+	  
 	  </form>
  
 </body>
